# jubilant-bassoon

./: .gitignore  CMakeLists.txt  README.md  build.sh  incremental_build.sh  main.cpp
paper/: acv_dynamics.tex  conclusion.tex  diploma.tex  experiments.tex  fan_performance.tex  graph0_tikz.tex  graph1_tikz.tex  graph2_tikz.tex  graph3_tikz.tex  graph4_tikz.tex  graph5_tikz.tex  graph6_tikz.tex  graph_tikz.tex  introduction.tex  main.tex  pressure.tex  simulation.tex  title.tex  wave.tex  wave_interaction.tex
scripts/: approx.ipynb  results.ipynb  wave.ipynb
sources/: CMakeLists.txt  acv.cpp  acv.h  acv_phisics.cpp  acv_phisics.h  application.cpp  application.h  cyclic_buffer.h  envvar.h  main.cpp  main2
sources/app_cli/: CMakeLists.txt  main.cpp
sources/app_sfml/: CMakeLists.txt  acv.cpp  acv.h  application.cpp
sources/common/: csv_utils.h  mytypes.h  tqdm.h  unicode_helpers.h  utils.h
sources/phisics/: acv.cpp  acv.h  acv_phisics.cpp  acv_phisics.h  compressor.h  constants.h  damp.h  wave.h
